[metadata]
name = lzeroutils
version = 0.1.0
author = Valerio Poggi
author_email = vpoggi@ogs.it
description = Client/server utilities for accessing and processing real-time seismic data in the LZERO system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shakelab/lzeroutils
license = AGPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Geophysics
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pyproj

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
    lzeroserver = lzeroutils.server:main
